--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ h1 {
     top: 0%;
     right: 0;
 }
+
 h2 {
     font-family: 'Open Sans', sans-serif;
     font-size: 200px;
@@ -151,6 +152,7 @@ p {
     font-size: 15px;
 }
 
+/*In progress media queries for responsiveness*/
 @media screen and (max-width: 980px) {
 
     .container {
