--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,9 +117,37 @@ nav {
     color: white;
 }
 
+#favorites-slogan {
+    font-size:32px;
+}
+
 #upload-text {
     font-size: 90px;
     padding-left: 25%;
+}
+
+#favorites-table {
+    font-size: 32px;
+}
+
+#favorites-gradient {
+background: #40E0D0;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #FF0080, #FF8C00, #40E0D0);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+-webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+height:100%;
+}
+
+#about-gradient {
+    background: #40E0D0;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #FF0080, #FF8C00, #40E0D0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    height:100%;
+    }
+#about h2 {
+    color:white;
+    
 }
 
 .container {
