--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,12 +125,12 @@ nav {
     color:#fff;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(-45deg, #1CFF1B,#FF5128, #ee0979, #1EC0FF); 
-    background: -webkit-linear-gradient(-45deg, #1CFF1B,#FF5128, #ee0979, #1EC0FF);  
-    background-size: 400% 400%;
-    -webkit-animation: Gradient 12s ease infinite;
-    -moz-animation: Gradient 12s ease infinite;
-    animation: Gradient 12s ease infinite; 
+    background: linear-gradient(-45deg, #1CFF1B,#FF5128, #0575E6, #f5af19, #ee0979, #00F260); 
+    background: -webkit-linear-gradient(-45deg, #1CFF1B,#FF5128, #0575E6, #f5af19, #ee0979, #00F260);  
+    background-size: 500% 500%;
+    -webkit-animation: Gradient 15s ease infinite;
+    -moz-animation: Gradient 15s ease infinite;
+    animation: Gradient 15s ease infinite; 
 }
     @-webkit-keyframes Gradient {
         0% {
@@ -188,6 +188,11 @@ margin-bottom: 5px;
     margin-bottom: 5px;
 }
 
+#mood-Gif {
+    width: 200px;
+    height: 200px;
+}
+
 #favorites-table {
     font-size: 32px;
 }
@@ -200,6 +205,14 @@ background: linear-gradient(to left, #FF0080, #FF8C00, #40E0D0);
 clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 height:100%;
 }
+
+@-webkit-keyframes Gradient {
+    0% {
+      background-position: 0% 50%; }
+    50% {
+      background-position: 100% 50%; }
+    100% {
+      background-position: 0% 50%; } }
 
 #about-gradient {
     background: #40E0D0;  /* fallback for old browsers */
