--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ html, body {
 
 
 #index{
-    background-image: url("../images/King\ Yna.jpg");
+    background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0);
 }
 
 #music {
@@ -41,7 +41,7 @@ html, body {
 }
 
 nav {
-    background-color: transparent;
+    background-color: black;;
 }
 
 #nav-mobile {
@@ -55,7 +55,7 @@ nav {
 }
 
 .music {
-    background: linear-gradient(to bottom, #1a2a6c 20%,  #b21f1f 50%, #fdbb2d 100%);
+    background: linear-gradient(45deg, #FF0080, #FF8C00, #40E0D0);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
@@ -65,7 +65,7 @@ nav {
     opacity: .8;
 }
 
-#upload, #favorites, #about, #home {
+#upload, #favorites, #about, #home, #log_in {
     color: white;
     font-size: 25px;
     font-family: 'Roboto Condensed', sans-serif;
@@ -75,7 +75,7 @@ nav {
 #slogan1{
     color: black;
     position: absolute;
-    top: 50%;
+    top: 70%;
     font-size: 20px;
     letter-spacing: 10px;
     right: 0;
@@ -85,7 +85,7 @@ nav {
 #slogan2 {
     color: white;
     position: absolute;
-    top: 50%;
+    top: 70%;
     font-size: 20px;
     letter-spacing: 10px;
 }
@@ -143,7 +143,7 @@ nav {
 
 #upload-text {
     font-size: 60px;
-    padding-left: 33%;
+    padding-left: 28%;
 }
 
 #upload-slogan {
@@ -167,14 +167,11 @@ nav {
     height: 340;
 }
 
-#startBtn {
+#startBtn, #snapBtn, #favoriteBtn {
+background-color: #000;
 margin-right: 10px;
 margin-bottom: 5px;
-}
-
-#snapBtn {
-margin-left:10px;
-margin-bottom: 5px;
+font-family: "Roboto Condensed", sans-serif;
 }
 
 #selfieImg {
@@ -197,11 +194,6 @@ margin-bottom: 5px;
 
 #favorites-table {
     font-size: 32px;
-}
-
-#favGif {
-    width:200px;
-    height:200px;
 }
 
 #favorites-gradient {
@@ -245,6 +237,7 @@ height:100%;
     font-family: 'Open Sans', sans-serif;
     padding-top: 48px;
     font-size: 24px;
+
 }
 
 #results-text {
@@ -261,21 +254,23 @@ p, #imageDiv {
     font-size: 25px;
 }
 
-#myCanvas {
-    padding-left:50%;
-}
-
 #analyze {
-    color: green;
-    border: solid 2px green;
-    padding: 3px;
-    font-size: 15px;
+    color: black;
+    border: solid 2px black;
+    padding: 5px;
+    margin-right: 10px;
+    font-size: 18px;
 }
 
 #modal1 {
     width:500px;
     height:700px;
     z-index:10;
+
+}
+
+#modal1 h3 {
+    color: #000;
 }
 
 #modal2 {
@@ -339,6 +334,7 @@ p, #imageDiv {
 
 #CreateAccount{
     float:left;
+    color:#000;
 }
 
 .modal-footer {
@@ -348,21 +344,34 @@ p, #imageDiv {
 }
 
 .dropdown-content li > a, .dropdown-content li > span {
-    color: white !important;
+   color: white !important;
     background-color: black !important;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
 #genre {
-    background-color: white;
+    background-color: #000;
     width: 150%;
 }
 
-#genre-select {
-    padding-left: 35%;
+input {
+    color:white;
 }
 
-#favoritegif{
+
+#password, #email {
+    color:#000;
+}
+
+#genre-select {
+    padding-left: 15%;
+}
+
+#genreLabel {
+    font-size: 16px;
+}
+
+.favoritegif{
     width:100px;
     height:85px;
 }
