--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,10 @@ html, body {
 }
 
 #index{
-    background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0);
+    background: #1E9600;  /* fallback for old browsers */
+background: -webkit-linear-gradient(45deg, #FF0000, #FFF200, #1E9600); 
+background: linear-gradient(45deg, #FF0000, #FFF200, #1E9600); 
+
 }
 #bg-left {
     position: fixed;
@@ -61,7 +64,9 @@ html, body {
     padding-top:100px;
     padding-right:20px;
     font-size: 17vw;
-    background: -webkit-linear-gradient( #40e0d0, #ff8c00, #ff0080);
+    background: #40E0D0;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #FF0080, #FF8C00, #40E0D0, #FFF200);  
+    background: linear-gradient(to left, #FF0080, #FF8C00, #40E0D0, #FFF200); 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
  } 
@@ -143,7 +148,7 @@ nav {
     opacity: .7;
 }
 
- #favorites-body, #about-body {
+#about-body {
     background-color: black;
     font-family: 'Open Sans', sans-serif;
     color: white;
@@ -193,8 +198,10 @@ nav {
 }
 
 #previewImg {
+    align:center;
     margin:0 auto; 
-    height: 340;
+    width:300px;
+    height:300px;
 }
 
 #startBtn, #snapBtn, #favoriteBtn {
@@ -219,13 +226,13 @@ font-family: "Roboto Condensed", sans-serif;
 }
 
 #imgUpload {
-    margin-left: 200px;
+    margin-left: 250px;
     margin-bottom: 5px;
 }
 
 #mood-Gif {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
 
 #results {
@@ -250,7 +257,8 @@ p, #imageDiv {
 }
 
 #genre-select {
-    padding-left: 15%;
+    padding-left: 17%;
+
 }
 
 #genre {
@@ -269,21 +277,29 @@ p, #imageDiv {
  }
 
 /*Favorites Page Css */
-
-#favorites-slogan {
-    font-size:32px;
+#favorites-header {
+    color:#fff;
+    font-size:4vw;
 }
-#favorites-table {
-    font-size: 32px;
+#favorites-slogan p {
+    font-size:2vw;
 }
+#favorites-table th{
+    font-size: 2vw;
+}
+#favorites-body {
+    font-family: 'Open Sans', sans-serif;
+        color: white;
+        background: #40E0D0;
+        background: -webkit-linear-gradient(-45deg, #1E9600, #FFF200, #FF0080, #FF8C00, #40E0D0);
+        background: linear-gradient(-45deg, #1E9600, #FFF200,#FF0080, #FF8C00, #40E0D0);
+        background-size: 400% 400%;
+    -webkit-animation: Gradient 15s ease infinite;
+    -moz-animation: Gradient 15s ease infinite;
+    animation: Gradient 15s ease infinite; 
 
-#favorites-gradient {
-background: #40E0D0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #FF0080, #FF8C00, #40E0D0);  
-background: linear-gradient(to left, #FF0080, #FF8C00, #40E0D0);  
--webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-height:100%;
+        
+    height:100%;
 }
 
 @-webkit-keyframes Gradient {
@@ -455,10 +471,19 @@ height:100%;
         height: 300px;
         padding-left: 0;
     }
-    #preview {
+    #previewImg {
         width: 300px;
         height:300px;
+        padding-left:20px
     }
+    #imgUpload {
+        padding-left: 40px;
+        margin-bottom: 5px;
+    }
+    #genre-select {
+        padding-left:22%;
+    }
+
 }
    
    @media screen and (max-width: 640px) {
@@ -466,8 +491,12 @@ height:100%;
         width: 100%;
         float: none;
     }
-    #genre {
-        align:center;
+    #genre-select {
+       padding-right: 200px;
+    }
+    #imgUpload {
+        width:200px;
+        margin: 0 auto;
     }
     #results {
         float:right;
@@ -483,10 +512,25 @@ height:100%;
         float:left;
         font-size: 14;
     }
+    #iframe {
+        width:200px;
+        padding-left:20px;
+    }
+    #previewImg {
+        width: 250px;
+        height:250px;
+        padding-left:20px
+    }
+    #imgUpload {
+        margin-left: 250px;
+        margin-bottom: 5px;
+    }
+
+    
 
     @media all and (min-width: 500px) {
         .wrapper {
           display: flex;
-        }
+        } 
       }
    }
